--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -58,3 +58,49 @@ nav {
 .nav__container__menu__list .logout-btn {
   cursor: pointer;
 }
+
+.nav__container__menu__list .button-menu{
+  background-color: #071a54;
+  border-radius: 50%;
+  height: 30px;
+  width: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+
+.menu-list{
+  width: 250px;
+  background: rgb(0, 85, 165);
+  position: absolute;
+  right: 180px;
+  border-radius: 14px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.menu-list .item-menu-toogle{
+  color: #fff;
+  display: flex;
+  width: 90%;
+  padding: 15px 5px;
+  border-bottom: 1px solid #fff;
+  margin: 0 auto;
+  align-items: center;
+}
+
+.menu-list .item-menu-toogle .icon-menu-list{
+  background-color: #071a54;
+  border-radius: 50%;
+  height: 25px;
+  width: 25px;
+
+  margin-right: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
