--- a/src/components/HamburgerMenu/HamburgerMenu.css
+++ b/src/components/HamburgerMenu/HamburgerMenu.css
@@ -17,6 +17,12 @@
   padding-inline-start: 20px;
   font-size: 1.5rem;
 }
+
+.HamburgerMenu__link a {
+  text-decoration: none;
+  color: white;
+}
+
 .HamburgerMenu i {
   font-size: 2rem;
   width: 2rem;
