modify routes and functions in user profile

--- a/src/components/menuProfile/MenuProfile.css
+++ b/src/components/menuProfile/MenuProfile.css
@@ -68,3 +68,9 @@
   margin-left: 15px;
 }
 
+.container-user-profile {
+ display: flex;
+ flex-direction: row;
+ width: 85%;
+ margin: 45px auto;
+}
