--- a/src/components/deleteClient/deleteClient.css
+++ b/src/components/deleteClient/deleteClient.css
@@ -9,6 +9,7 @@
 }
 .delete-container__delete-menu, .delete-container__delete-edit{
   margin: 50px;
+  margin-top: 0px;
 }
 .delete-container__delete-menu{
   border: 1px solid rgb(218, 218, 218);
