--- a/src/components/profileClient/ProfileEdit.css
+++ b/src/components/profileClient/ProfileEdit.css
@@ -3,10 +3,11 @@
   flex-direction: row;
   width: 85%;
   margin: 25px auto;
-  
+
 }
 .profile-container div{
   margin: 50px;
+  margin-top: 0px;
 }
 .profile-container__profile-menu{
   border: 1px solid rgb(218, 218, 218);
@@ -107,4 +108,17 @@
   border-radius: 18px;
   margin-top: 25px;
   cursor: pointer;
+}
+
+.document-select{
+  background-color: #fff;
+  width: 77%;
+  border-radius: 14px;
+  border: 1px solid #D4CBCB;
+  height: 38px;
+  font-size: 18px;
+  padding: 8px;
+  padding-left: 15px;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
