--- a/src/components/HamburgerMenu/HamburgerMenu.css
+++ b/src/components/HamburgerMenu/HamburgerMenu.css
@@ -8,6 +8,7 @@
   position: fixed;
   color: white;
   font-family: 'Ubuntu Mono', monospace;
+  z-index: 1;
 }
 .HamburgerMenu li {
   display: block;
