--- a/src/components/reservation/ServiceList.css
+++ b/src/components/reservation/ServiceList.css
@@ -2,11 +2,11 @@
   margin: 2rem;
   display: grid;
   gap: 1rem;
-  grid-template-columns: repeat(auto-fit, minmax(20rem, 22rem));
+  grid-template-columns: 1fr;
   justify-content: center;
 }
 @media screen and (min-width: 980px) {
   .rooms-container {
-    grid-template-columns: repeat(3, minmax(20rem, 22rem));
+    grid-template-columns: 1fr 1fr 1fr;
   }
 }
