--- a/src/components/searchBar/SearchBar.css
+++ b/src/components/searchBar/SearchBar.css
@@ -34,7 +34,6 @@
 
 .search__form__label__body__input,
 .search__form__label__body__select {
-  width: 90%;
   border: none;
   background: none;
   display: block;
@@ -70,7 +69,7 @@
 @media (min-width: 768px) {
   .search__form {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: 0 1rem;
     width: inherit;
   }
@@ -94,7 +93,7 @@
 @media (min-width: 1200px) {
   .search__form {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: 0 1rem;
     width: inherit;
   }
